[gd_scene load_steps=2 format=3 uid="uid://celebration_effects"]

[ext_resource type="Script" path="res://scripts/ui/celebration_effects.gd" id="1_script"]

[node name="CelebrationEffects" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.3)

[node name="CelebrationLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "ðŸŽ‰ AMAZING! ðŸŽ‰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfettiParticles" type="GPUParticles2D" parent="."]
position = Vector2(640, 0)
amount = 100
lifetime = 3.0
one_shot = true
explosiveness = 0.8
randomness = 0.5

[node name="StarBurst" type="GPUParticles2D" parent="."]
position = Vector2(640, 360)
amount = 20
lifetime = 1.5
one_shot = true
explosiveness = 1.0
